<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/inventory" />

        <LinearLayout
            android:id="@+id/pic_fab_controls_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignBottom="@id/product_image"
            android:layout_toRightOf="@+id/product_image">

            <ImageButton
                android:id="@+id/fab_select_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/fab_margin_min"
                android:scaleType="centerCrop"
                android:background="@drawable/gallery" />

            <ImageButton
                android:id="@+id/fab_take_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/fab_margin_min"
                android:scaleType="centerCrop"
                android:background="@drawable/camera"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/label_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/label_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <!-- Currency field -->
            <TextView
                android:id="@+id/text_currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingRight="2dp"
                android:paddingTop="16dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/label_quantity" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/label_product_instock"
                    android:textColor="@color/data_text_color" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dec_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/label_decrement"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/product_quantity_in_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/inc_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/label_increment"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/label_product_sold"
                    android:textColor="@color/data_text_color" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp">

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/edit_product_sold_quantity"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_quantity"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Order category -->
    <LinearLayout
        android:id="@+id/container_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/container_quantity_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_order" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/label_supplier"
                        android:textColor="@color/data_text_color" />

                    <!-- Input field -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <!-- Gender drop-down spinner -->
                        <com.example.android.inventory.NDSpinner
                            android:id="@+id/spinner_supplier"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:paddingRight="16dp"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/label_product_restock"
                        android:textColor="@color/data_text_color" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_product_restock_quantity"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_quantity"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/action_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_order"
                android:padding="16dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>